ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "grafana.example"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monit-grafana
            port:
              number: 80
