ingress-promo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "prometheus.example"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monit-kube-prometheus-stac-prometheus
            port:
              number: 9090
